--- a/src/main/webapp/css/login.css
+++ b/src/main/webapp/css/login.css
@@ -1,8 +1,56 @@
-
-body{
-background-image:url(../image/login.jpg)
-}
-
-form {
-	
-}
+ body{
+        font-family: '微软雅黑','黑体','文泉驿正黑';
+       
+        background-image:url(../image/login_bg.jpg);
+      }
+      .form{
+        width: 300px;
+        /* 块元素居中 */
+        margin: 0 auto;
+        border: 4px solid #cff;
+        background: #eee;
+        /* css3 圆角 */
+        border-radius: 10px;
+      }
+      .form h2{
+        padding: 8px;
+        margin: 0;
+        background: #006;
+        color: #fff;
+        border-radius: 6px 6px 0 0;
+        /*文字居中*/
+        text-align: center;
+      }
+      .form p{
+        margin: 0;
+        padding: 8px;
+        font-size: 16px;
+        border-bottom: 2px solid #ddd;
+      }
+      .form label{
+        display: inline-block;
+        width: 70px;
+        text-align: right;
+      }
+      .form p input{
+        width: 80px;
+      }
+      .form p input:focus{
+        background:#ffc;
+      }
+      .form div {
+        padding: 10px;
+        background: #828282;
+        text-align: center;
+        border-radius: 0 0 6px 6px;
+      }
+      /* 格式化登陆按钮 */
+      .form div input{
+        padding: 6px 16px; 
+        border: 0;
+        border-radius: 5px;
+        background-color: #000099;
+        color: #fff;
+        font-family:'微软雅黑','黑体','文泉驿正黑';
+        cursor: pointer;
+      }
